--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: erlang
 otp_release:
   - 18.2.1
 install:
-    pip install codecov
+    pip install -U codecov
 script:
   - rebar3 eunit
 after_success:
