--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
-sudo: required
 language: erlang
 otp_release:
-  - 18.2.1
+  - 20.3.1
+before_install:
+  - pip install --upgrade pip
 install:
-    pip install -U codecov
+  - pip install codecov
 script:
   - rebar3 eunit
 after_success:
