--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,7 @@
-sudo: required
 language: erlang
 otp_release:
   - 20.3.1
-before_install:
-  - sudo -H pip install --upgrade pip
-install:
-  - sudo -H pip install codecov
 script:
   - rebar3 eunit
 after_success:
-    codecov
+  - bash <(curl -s https://codecov.io/bash)
